Fix misaligned input dropdown

--- a/common/sass/styles/overrides/forms.scss
+++ b/common/sass/styles/overrides/forms.scss
@@ -2,6 +2,7 @@
 @import 'common/sass/variables';
 
 label {
+  display: block;
   margin-bottom: $space-xs;
   font-size: $font-size-bump-more;
 
@@ -30,6 +31,8 @@ input[readonly] {
 }
 
 .form-control {
+  padding: 8px 16px;
+  height: auto;
   margin-top: $space-sm;
   margin-bottom: $space-sm;
   transition: $transition;
