--- a/common/sass/styles/overrides/input-groups.scss
+++ b/common/sass/styles/overrides/input-groups.scss
@@ -2,9 +2,22 @@
 @import "common/sass/variables";
 
 .input-group {
+  display: flex;
+  margin-bottom: 8px;
+ 
   > * {
+    display: block;
     margin-bottom: 0;
     margin-top: 0;
+  }
+  
+  > label {
+    flex-grow: 1;
+  }
+
+  .btn {
+    padding: 8px 16px;
+    font-size: 1rem;
   }
 
   .dropdown-toggle {
@@ -15,14 +28,13 @@
 
 // Align with inputs
 .input-group-addon {
-  padding: 0 $padding-base-horizontal;
+  font-size: inherit;
 }
 
+.input-group-addon,
 .input-group-btn {
-  .btn {
-    margin-bottom: 0;
-    margin-top: 0;
-    font-size: $font-size-base;
-    padding: .55rem $space-xl;
-  }
+  width: auto;
+  display: flex;
+	flex-direction: column;
+  justify-content: flex-end;
 }
